grammar/Antlr/PostParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PostParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, COMMENT=21, LINE_COMMENT=22, WS=23, NEWLINE=24, 
		TAB=25, BYTE_ORDER_MARK=26, CALL=27, GOTO=28, GO=29, TO=30, PROCEDURE=31, 
		PROC=32, END=33, DECLARE=34, ARGUMENT=35, DEFINE=36, BINARY=37, DECIMAL=38, 
		AUTOMATIC=39, BUILTIN=40, INTRINSIC=41, STATIC=42, VARIABLE=43, BASED=44, 
		DEFINED=45, INTERNAL=46, EXTERNAL=47, RETURN=48, IF=49, THEN=50, ELSE=51, 
		ELIF=52, RETURNS=53, POINTER=54, BIT=55, CHARACTER=56, ENTRY=57, FIXED=58, 
		FLOAT=59, OFFSET=60, STRING=61, VARYING=62, COROUTINE=63, COFUNCTION=64, 
		LOOP=65, WHILE=66, UNTIL=67, ENDLOOP=68, RELOOP=69, BASE_B=70, BASE_O=71, 
		BASE_D=72, BASE_H=73, FRAC_B=74, FRAC_D=75, FRAC_O=76, FRAC_H=77, IDENTIFIER=78, 
		BINARY_PATTERN=79, OCTAL_PATTERN=80, HEXADECIMAL_PATTERN=81, DECIMAL_PATTERN=82, 
		LSEP=83, BIN=84, OCT=85, DEC=86, HEX=87, ARROW=88, DOT=89, COMMA=90, LPAR=91, 
		RPAR=92, LBRACK=93, RBRACK=94, LBRACE=95, RBRACE=96, EQUALS=97, TIMES=98, 
		DIVIDE=99, PLUS=100, MINUS=101, SEMICOLON=102, POWER=103, COLON=104, DQUOTE=105, 
		QUOTE=106;
	public static final int
		RULE_translation_unit = 0, RULE_procedure_stmt = 1, RULE_stmt_block = 2, 
		RULE_terminator = 3, RULE_label_stmt = 4, RULE_nonexecutable_stmt = 5, 
		RULE_executable_stmt = 6, RULE_preprocessor_stmt = 7, RULE_assign_stmt = 8, 
		RULE_reference = 9, RULE_arguments = 10, RULE_arguments_list = 11, RULE_basic_reference = 12, 
		RULE_structure_qualification = 13, RULE_structure_qualification_list = 14, 
		RULE_subscript = 15, RULE_subscript_commalist = 16, RULE_expression = 17, 
		RULE_expression_9 = 18, RULE_expression_8 = 19, RULE_expression_7 = 20, 
		RULE_expression_6 = 21, RULE_expression_5 = 22, RULE_expression_4 = 23, 
		RULE_expression_3 = 24, RULE_expression_2 = 25, RULE_expression_1 = 26, 
		RULE_prefix_expression = 27, RULE_parenthesized_expression = 28, RULE_primitive_expression = 29, 
		RULE_prefix_operator = 30, RULE_comparison_operator = 31, RULE_shift_operator = 32, 
		RULE_identifier = 33, RULE_keyword = 34, RULE_call_stmt = 35, RULE_goto_stmt = 36, 
		RULE_end_stmt = 37, RULE_endloop_stmt = 38, RULE_reloop_stmt = 39, RULE_declare_stmt = 40, 
		RULE_type_info = 41, RULE_dimension_suffix = 42, RULE_bound_pair = 43, 
		RULE_bound_pair_commalist = 44, RULE_lower_bound = 45, RULE_upper_bound = 46, 
		RULE_attribute = 47, RULE_data_attribute = 48, RULE_precision = 49, RULE_number_of_digits = 50, 
		RULE_scale_factor = 51, RULE_max_length = 52, RULE_based = 53, RULE_defined = 54, 
		RULE_entry_information = 55, RULE_coprocedure_specifier = 56, RULE_parameter_name_commalist = 57, 
		RULE_returns_descriptor = 58, RULE_return_stmt = 59, RULE_if_stmt = 60, 
		RULE_then_clause = 61, RULE_else_clause = 62, RULE_elif_clause = 63, RULE_loop_stmt = 64, 
		RULE_while_option = 65, RULE_until_option = 66, RULE_define_stmt = 67, 
		RULE_numeric_literal = 68, RULE_hexadecimal_literal = 69, RULE_octal_literal = 70, 
		RULE_decimal_literal = 71, RULE_binary_literal = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"translation_unit", "procedure_stmt", "stmt_block", "terminator", "label_stmt", 
			"nonexecutable_stmt", "executable_stmt", "preprocessor_stmt", "assign_stmt", 
			"reference", "arguments", "arguments_list", "basic_reference", "structure_qualification", 
			"structure_qualification_list", "subscript", "subscript_commalist", "expression", 
			"expression_9", "expression_8", "expression_7", "expression_6", "expression_5", 
			"expression_4", "expression_3", "expression_2", "expression_1", "prefix_expression", 
			"parenthesized_expression", "primitive_expression", "prefix_operator", 
			"comparison_operator", "shift_operator", "identifier", "keyword", "call_stmt", 
			"goto_stmt", "end_stmt", "endloop_stmt", "reloop_stmt", "declare_stmt", 
			"type_info", "dimension_suffix", "bound_pair", "bound_pair_commalist", 
			"lower_bound", "upper_bound", "attribute", "data_attribute", "precision", 
			"number_of_digits", "scale_factor", "max_length", "based", "defined", 
			"entry_information", "coprocedure_specifier", "parameter_name_commalist", 
			"returns_descriptor", "return_stmt", "if_stmt", "then_clause", "else_clause", 
			"elif_clause", "loop_stmt", "while_option", "until_option", "define_stmt", 
			"numeric_literal", "hexadecimal_literal", "octal_literal", "decimal_literal", 
			"binary_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%'", "'include'", "'.inc'", "'|:'", "'&:'", "'|'", "'~'", "'&'", 
			"'||'", "'>'", "'>='", "'<'", "'<='", "'~>'", "'~='", "'~<'", "'>>'", 
			"'<<'", "'>>>'", "'<<<'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'->'", 
			"'.'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'*'", 
			"'/'", "'+'", "'-'", "';'", "'**'", "':'", "'\"'", "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "COMMENT", "LINE_COMMENT", 
			"WS", "NEWLINE", "TAB", "BYTE_ORDER_MARK", "CALL", "GOTO", "GO", "TO", 
			"PROCEDURE", "PROC", "END", "DECLARE", "ARGUMENT", "DEFINE", "BINARY", 
			"DECIMAL", "AUTOMATIC", "BUILTIN", "INTRINSIC", "STATIC", "VARIABLE", 
			"BASED", "DEFINED", "INTERNAL", "EXTERNAL", "RETURN", "IF", "THEN", "ELSE", 
			"ELIF", "RETURNS", "POINTER", "BIT", "CHARACTER", "ENTRY", "FIXED", "FLOAT", 
			"OFFSET", "STRING", "VARYING", "COROUTINE", "COFUNCTION", "LOOP", "WHILE", 
			"UNTIL", "ENDLOOP", "RELOOP", "BASE_B", "BASE_O", "BASE_D", "BASE_H", 
			"FRAC_B", "FRAC_D", "FRAC_O", "FRAC_H", "IDENTIFIER", "BINARY_PATTERN", 
			"OCTAL_PATTERN", "HEXADECIMAL_PATTERN", "DECIMAL_PATTERN", "LSEP", "BIN", 
			"OCT", "DEC", "HEX", "ARROW", "DOT", "COMMA", "LPAR", "RPAR", "LBRACK", 
			"RBRACK", "LBRACE", "RBRACE", "EQUALS", "TIMES", "DIVIDE", "PLUS", "MINUS", 
			"SEMICOLON", "POWER", "COLON", "DQUOTE", "QUOTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PostParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Translation_unitContext extends ParserRuleContext {
		public Procedure_stmtContext procedure_stmt() {
			return getRuleContext(Procedure_stmtContext.class,0);
		}
		public TerminalNode BYTE_ORDER_MARK() { return getToken(PostParser.BYTE_ORDER_MARK, 0); }
		public Preprocessor_stmtContext preprocessor_stmt() {
			return getRuleContext(Preprocessor_stmtContext.class,0);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).enterTranslation_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).exitTranslation_unit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostVisitor ) return ((PostVisitor<? extends T>)visitor).visitTranslation_unit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BYTE_ORDER_MARK) {
				{
				setState(146);
				match(BYTE_ORDER_MARK);
				}
			}

			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(149);
				preprocessor_stmt();
				}
			}

			setState(152);
			procedure_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Procedure_stmtContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(PostParser.PROCEDURE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Entry_informationContext entry_information() {
			return getRuleContext(Entry_informationContext.class,0);
		}
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public End_stmtContext end_stmt() {
			return getRuleContext(End_stmtContext.class,0);
		}
		public Procedure_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).enterProcedure_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).exitProcedure_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostVisitor ) return ((PostVisitor<? extends T>)visitor).visitProcedure_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Procedure_stmtContext procedure_stmt() throws RecognitionException {
		Procedure_stmtContext _localctx = new Procedure_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_procedure_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(PROCEDURE);
			setState(155);
			identifier();
			setState(156);
			entry_information();
			setState(157);
			stmt_block();
			setState(158);
			end_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stmt_blockContext extends ParserRuleContext {
		public List<Nonexecutable_stmtContext> nonexecutable_stmt() {
			return getRuleContexts(Nonexecutable_stmtContext.class);
		}
		public Nonexecutable_stmtContext nonexecutable_stmt(int i) {
			return getRuleContext(Nonexecutable_stmtContext.class,i);
		}
		public List<TerminatorContext> terminator() {
			return getRuleContexts(TerminatorContext.class);
		}
		public TerminatorContext terminator(int i) {
			return getRuleContext(TerminatorContext.class,i);
		}
		public List<Executable_stmtContext> executable_stmt() {
			return getRuleContexts(Executable_stmtContext.class);
		}
		public Executable_stmtContext executable_stmt(int i) {
			return getRuleContext(Executable_stmtContext.class,i);
		}
		public Stmt_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).enterStmt_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).exitStmt_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostVisitor ) return ((PostVisitor<? extends T>)visitor).visitStmt_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stmt_blockContext stmt_block() throws RecognitionException {
		Stmt_blockContext _localctx = new Stmt_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt_block);
		try {
			int _alt;
			setState(177);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case CALL:
			case GOTO:
			case GO:
			case TO:
			case PROCEDURE:
			case PROC:
			case END:
			case DECLARE:
			case ARGUMENT:
			case DEFINE:
			case BUILTIN:
			case INTRINSIC:
			case RETURN:
			case IF:
			case THEN:
			case ELSE:
			case ELIF:
			case RETURNS:
			case POINTER:
			case BIT:
			case CHARACTER:
			case ENTRY:
			case FIXED:
			case FLOAT:
			case OFFSET:
			case STRING:
			case VARYING:
			case COROUTINE:
			case COFUNCTION:
			case LOOP:
			case WHILE:
			case UNTIL:
			case ENDLOOP:
			case RELOOP:
			case IDENTIFIER:
			case LBRACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(160);
						nonexecutable_stmt();
						setState(161);
						terminator();
						}
						} 
					}
					setState(167);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(168);
						executable_stmt();
						setState(169);
						terminator();
						}
						} 
					}
					setState(175);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;
			case SEMICOLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				terminator();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminatorContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(PostParser.SEMICOLON, 0); }
		public TerminatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).enterTerminator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).exitTerminator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostVisitor ) return ((PostVisitor<? extends T>)visitor).visitTerminator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminatorContext terminator() throws RecognitionException {
		TerminatorContext _localctx = new TerminatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_terminator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Label_stmtContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PostParser.LBRACE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(PostParser.RBRACE, 0); }
		public Label_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).enterLabel_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PostListener ) ((PostListener)listener).exitLabel_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PostVisitor ) return ((PostVisitor<? extends T>)visitor).visitLabel_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Label_stmtContext label_stmt() throws RecognitionException {
		Label_stmtContext _localctx = new Label_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_label_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(LBRACE);
			setState(182);
			identifier();
			setState(183);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
